--- a/Sprint 1/filmFinder/templates/home.html
+++ b/Sprint 1/filmFinder/templates/home.html
@@ -1,22 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class = "bootstrapiso">
+<div class = "bootstrapiso" style="margin-top:20px;">
 	<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img src="../static/images/1.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/1.jpg" class="d-block w-100" alt="..." style="width:100%;height:400px">
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/2.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/2.jpg" class="d-block w-100" alt="..." style="width:100%;height:400px">
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/3.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/3.jpg" class="d-block w-100" alt="..." style="width:100%;height:400px">
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/4.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/4.jpg" class="d-block w-100" alt="..." style="width:100%;height:400px">
 		  </div>
 		  <div class="carousel-item">
-			<img src="../static/images/5.jpg" class="d-block w-100" alt="...">
+			<img src="../static/images/5.jpg" class="d-block w-100" alt="..." style="width:100%;height:400px">
 		  </div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
