--- a/Sprint 1/filmFinder/templates/login.html
+++ b/Sprint 1/filmFinder/templates/login.html
@@ -1,7 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class = "bootstrapiso">
-	<div class="content-section">
+<div class="page-top">
+	<h2>LOGIN Page</h2>
+	<ul class ="center">
+		<li><a href="{{ url_for('home') }}">Home</a></li>
+		<li>/ </li>
+		<li style = "color: #ec7532;">Login</li>
+	 </ul>
+</div>
+<div class = "bootstrapiso" style = "margin:20px 20% 20px 20%; ">
+	<div class="content-section" >
 		<form method="POST" action="">
 			{{ form.hidden_tag() }}
 			<fieldset class="form-group">
