--- a/Sprint 1/filmFinder/templates/search_temp.html
+++ b/Sprint 1/filmFinder/templates/search_temp.html
@@ -1,5 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="page-top">
+	<h2>Search results Page</h2>
+	<ul class ="center">
+		<li><a href="{{ url_for('home') }}">Home</a></li>
+		<li>/ </li>
+		<li style = "color: #ec7532;">Search result</li>
+	 </ul>
+</div>
     <h1 class = 'center'>Search Results:</h1>
     <form method="POST">
   
