--- a/Sprint 1/filmFinder/templates/layout.html
+++ b/Sprint 1/filmFinder/templates/layout.html
@@ -43,7 +43,7 @@
       <div class="social-content"><a href="{{ url_for('register') }}">CREATE ACCOUNT</a></div>
       {%endif%}
     </div>
-<!-- meau -->
+    <!-- meau -->
     <div class="span"></div>
     <div class="menu">
       <div class="menu-start">
@@ -51,30 +51,40 @@
           <div class="menu-start-img"></div>
         </a>
       </div>
-      <div class="menu-center">
-        <form action="/search_temp" method = 'POST'>
-          <input class="search-input"  type="search" name ='search' placeholder="film/director/actor" aria-label="Search"/>
-          <button type="submit" class="search-button">Search</button>    
-  
+      <div class="menu-center bootstrapiso">
+        
+        <form action="/search_temp" method = 'POST'>   
+          <div class="input-group" style="padding:-3px;">
+            <input type="search" name="search" class="form-control" placeholder="Film/Director/Actor">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="submit" id="button-addon2">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                  <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
         </form>	
 
       </div>
       <div class="menu-end">
-        <div class="menu-end-content"><a href="/">Home</a></div>
-        <div class="social-content"><a class="disabled">|</a></div>
-        <div class="menu-end-content"><a href="{{ url_for('about') }}">About</a></div>
-        <div class="social-content"><a class="disabled">|</a></div>
-        <div class="menu-end-content"><a href="{{ url_for('advanced_search') }}">Search</a></div>
+        <div class="menu-end-content"><a href="/" active>Home</a></div>
+        <div class="menu-end-content"><a class="disabled" style="color:black">|</a></div>
+        <div class="menu-end-content"><a href="{{ url_for('about') }}" active>About</a></div>
+        <div class="menu-end-content"><a class="disabled" style="color:black">|</a></div>
+        <div class="menu-end-content"><a class="active" href="{{ url_for('advanced_search') }}">Search</a></div>
       </div>
     </div>
     <div>
+      
 		  {% with messages = get_flashed_messages(with_categories=true) %}
 		  	{% if messages %}
 			  	{% for category, message in messages %}
-			  		<div class="alert alert-{{ category }}">{{ message }}</div>
+			  		<div class="alert  alert-primary alert-{{ category }}">{{ message }}</div>
 			  	{% endfor %}
 		  	{% endif %}
-		  {% endwith%} 
+      {% endwith%} 
           {% block content %}{% endblock %}
     </div>  
     <div class="bottom-bar">
