--- a/Sprint 1/filmFinder/static/top-bar.css
+++ b/Sprint 1/filmFinder/static/top-bar.css
@@ -3,6 +3,7 @@
 	padding: 0px;
 } */
 .social {
+	top:0;
 	margin: 0px;
 	width: 100%;
 	height: 40px;
@@ -10,7 +11,9 @@
 	flex-flow: row wrap;
 	justify-content: flex-end;
 	background: #263238;
-	/*border: 2px solid blue;*/
+	position:fixed;
+	z-index:999;
+	/* border: 2px solid blue; */
 }
 
 .social-content {
@@ -28,10 +31,12 @@
 	width:100px;
 }
 .menu {
+	margin-top: 40px;
 	width: 100%; 
 	height: auto;
 	display: flex;
 	flex-flow: row wrap;
+	margin-bottom: 10px;
 	/*border: 2px solid red;*/
 }
 
@@ -43,44 +48,30 @@
 	background-size: contain ;
 	background-position: center;
 	height: 50px;
-	/*border: 2px solid red;*/
+	/* border: 2px solid red; */
+	margin-top: 2%;
 }
+
 .menu-center {
-/*	border: 2px solid red;*/
-	width: 36%;
+	margin-left: 20px;
+
+	width: 40%;
 	height: 60px;
 	/*background: transparent;
     color: #333;
     border: medium none;
-    padding: 5px 50px 5px 10px;*/
+    padding: 5px 50px 5px 10px; */
 	
 }
-.search-input  {
-	margin: 8px 0px 0px 0px;
-	/*text-align: center;*/
-	height: 36px;
-	width: 80%;
-	border-radius: 15px;
-	text-indent: 10px;
-	border: none;
-	background-color: gainsboro;
-	/*background: #eaeaea none repeat scroll 0 0;*/
-   
-}
-.search-button{
-	margin: 0px 0px 0px 0px;
-	height: 33px;
-	width: 80px;
-}
-
 .menu-end {
+	margin-top: 8px;
 	/* border: 1px solid red; */
-	width: 30%;
-	height: 50px;
+	width:26%;
+	height: 60px;
 	display: flex;
 	flex-flow: row nowrap;
 	font-size: x-large;
-	position: right;
+	right:0;
 	margin-left:10%;
 	/*background: transparent;
     color: #333;
@@ -88,6 +79,7 @@
     padding: 5px 50px 5px 10px;*/
 	
 }
+
 .menu-end-content {
 	font-size: large;
 	align-items: center;
@@ -98,7 +90,7 @@
 	text-decoration: underline;
 }
 .menu-end-content a{
-	color: black;
+	color: rgb(209, 132, 16);
 }
 
 .footer{
