--- a/Sprint 1/filmFinder/static/movie.css
+++ b/Sprint 1/filmFinder/static/movie.css
@@ -209,3 +209,34 @@
 	height: 20px;
 	width: 20px;
    }
+
+.mat20{
+	margin-top: 20px;
+}
+.kk{
+
+	float:left;
+	width:27.3%;
+	height:400px;
+	border: 1px solid #dddddd;
+	list-style: none;
+	margin-left: 3%;
+	margin-right:3%;
+	margin-bottom: 3%;
+	border-radius: 30px;
+	
+}
+.demo ul li img{
+	width: 50%;
+	margin: 0 25% 0 25%;
+	height:70%;
+	/* border: 2px solid palevioletred; */
+}
+
+.demo ul li form{
+	text-align: center;
+	width: 50%;
+	margin: 5% 25% -5% 25%;
+	height:65%;
+	/* border: 2px solid palevioletred; */
+}
