--- a/Sprint 1/filmFinder/templates/blocklist.html
+++ b/Sprint 1/filmFinder/templates/blocklist.html
@@ -1,20 +1,52 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title> Blocklist </title>
-</head>
+{% extends "layout.html" %}
+{% block content %}
 
 <body>
-    {%for user in blocklist%}
-    <br>
-    {{user.username}}
-    <br>
-    <form action="../blocklist/{{current_user.id}}" method="POST">
-        <button type="submit" name="remove_from_blocklist" value="{{user.id}}">Remove</button>
-    </form>
-    {%endfor%}
+    <div class="page-top">
+        <h2>My Blocklist</h2>
+        <ul class ="center">
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li>/ </li>
+            <li><a href="/account/{{current_user.id}}">User page</a></li>
+            <li>/ </li>
+            <li style = "color: #ec7532;">My Blocklist</li>
+         </ul>
+    </div>
+    <div class = "bootstrapiso">
+        <div class="content-section">
+            <div class="media">
+                <img class="rounded-circle account-img" src="../static/profile_pics/{{current_user.profile_image}}">
+                <div class="media-body">
+                    <h2 class="account-heading">{{ current_user.username }}</h2>
+                    <p class="text-secondary">{{ current_user.email }}</p>
+                </div>   
+            </div>
+            <hr>
+            <br>   
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">User Name</th>
+                    <th scope="col">Opeartion</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {%for user in blocklist%}
+                    <tr>
+                        <th scope="row">{{blocklist.index(user)+1}}</th>
+                        <td>{{user.username}}</td>
+                        <td>
+                            <form action="../blocklist/{{current_user.id}}" method="POST">
+                                <button type="submit" class="btn btn-danger" name="remove_from_blocklist" value="{{user.id}}">Remove</button>
+                            </form>
+                        </td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+              </table>
+        </div>
+    </div>
 </body>
 
-</html>
+{% endblock content %}
