--- a/Sprint 1/filmFinder/templates/film.html
+++ b/Sprint 1/filmFinder/templates/film.html
@@ -82,42 +82,61 @@
 							<div class="detail-subtitle">REVIEW</div>
 							<div class="detail-review-content">
 								<div class="detail-review-icon">
-									<div class="review-icon"><img style="height:100px;width:100px;" src="../static/profile_pics/default.jpg">
-									</div>
-								</div>
-								<div class="detail-review-word">
-									<div class="review-name">Review by
-										<a href=""> Tom</a>
-									</div>
-									<div class="review-content">
-										<p>
-											I'll have to watch the original to see how bad or good this version is. I'm sure the Hitchcock version is better. I know this is a revisit of that movie but I really don't have anything to judge it against. I think the acting was fine
-										</p>
-									</div>
-								</div>
-							</div>
-							<hr />
-							<div class="detail-review-content">
-								<div class="detail-review-icon">
 									<div class="review-icon">
-										<img style="height:100px;width:100px;" src="../static/profile_pics/default.jpg">
+										<img style="height:100px;width:100px;margin:100% 0 0 100%" src="../static/profile_pics/default.jpg">
 									</div>
 								</div>
 								<div class="detail-review-word">
 									<div class="review-name">
-									 <div class="name">Review by <a href=""> Tom</a ></div>
-									 <div class="button"><a href=" "><div class="button-img" title="Block this user"></div></a ></div>
+										<div class="name">Review by <a href=""> Tom</a ></div>
+										<div class="button">
+											<a href=" ">
+												<div class="button-img" title="Block this user"></div>
+											</a >
+										</div>
 									</div>
 									<div class="review-content">
-									 <p>
-									  I'll have to watch the original to see how bad or good this version is. I'm sure the Hitchcock version is better. I know this is a revisit of that movie but I really don't have anything to judge it against. I think the acting was fine
-									 </p >
+										<p>
+											I'll have to watch the original to see how bad or good this version is. I'm sure the Hitchcock version is better. I know this is a revisit of that movie but I really don't have anything to judge it against. I think the acting was fine
+										</p >
 									</div>
 									<div class="button-like" title="Like this comment">
-									 <a href=""><div class="like-img"></div></a >
-									 <div class="like-word">like</div>
+										<a href="">
+											<div class="like-img"></div>
+										</a >
+										<div class="like-word">like</div>
 									</div>
-								   </div>
+								</div>
+							</div>
+							
+							<hr />
+							<div class="detail-review-content">
+								<div class="detail-review-icon">
+									<div class="review-icon">
+										<img style="height:100px;width:100px;margin:100% 0 0 100%;" src="../static/profile_pics/default.jpg">
+									</div>
+								</div>
+								<div class="detail-review-word">
+									<div class="review-name">
+										<div class="name">Review by <a href=""> Tom</a ></div>
+										<div class="button">
+											<a href=" ">
+												<div class="button-img" title="Block this user"></div>
+											</a >
+										</div>
+									</div>
+									<div class="review-content">
+										<p>
+											I'll have to watch the original to see how bad or good this version is. I'm sure the Hitchcock version is better. I know this is a revisit of that movie but I really don't have anything to judge it against. I think the acting was fine
+										</p >
+									</div>
+									<div class="button-like" title="Like this comment">
+										<a href="">
+											<div class="like-img"></div>
+										</a >
+										<div class="like-word">like</div>
+									</div>
+								</div>
 							</div>
 							<hr />
 							<div class="bootstrapiso">
@@ -134,7 +153,6 @@
 					style="border: 2px solid rgb(5, 5, 5);
 							border-radius: 30px;
 							padding:25px 10px;
-							background-color:rgba(240, 255, 255, 0.5);
 							">
 						<div class="detail-recom-title">
 							You may also like
