--- a/Sprint 1/filmFinder/templates/home.html
+++ b/Sprint 1/filmFinder/templates/home.html
@@ -37,9 +37,16 @@
 		style="border: 2px solid rgb(5, 5, 5);
 				border-radius: 30px;
 				padding:25px 10px;
-				background-color:rgba(240, 255, 255, 0.5);
+				margin-bottom: 30px;
 				" >
-			<div class="movie-recom-title">Recommend For You</div>
+			<div class="movie-recom-title">
+				<div class="recom-title-content">
+				 Recommend For You
+				</div>
+				<div class="recom-more">
+					<a href=" ">More>></a >
+				</div>
+			</div>
 			<div class="movie-recom-content">
 				<div class="moive-recom">
 					<div class="moive-recom-row">
@@ -201,14 +208,20 @@
 			</div>
 		</div>
 		{%endif%}
-		<hr>
 		<div class="movie-highest"
 		style="border: 2px solid rgb(5, 5, 5);
 				border-radius: 30px;
 				padding:25px 10px;
-				background-color:rgba(240, 255, 255, 0.5);
+
 				" >
-			<div class="movie-recom-title">Highest rating film</div>
+			<div class="movie-recom-title">
+				<div class="recom-title-content">
+				Highest rating films
+				</div>
+				<div class="recom-more">
+					<a href=" ">More>></a >
+				</div>
+			</div>
 			<div class="movie-recom-content">
 
 				<div class="moive-recom">
@@ -407,7 +420,6 @@
 	<div style="border: 2px solid rgb(5, 5, 5);
 				border-radius: 30px;
 				padding:25px 10px;
-				background-color:rgba(240, 255, 255, 0.5);
 				" 
 	class="movie-col-2">
 		<div class="detail-recom-title">
@@ -431,6 +443,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.1.poster}}.jpg">
@@ -448,6 +461,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.2.poster}}.jpg">
@@ -465,6 +479,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.3.poster}}.jpg">
@@ -482,6 +497,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.4.poster}}.jpg">
@@ -499,6 +515,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.5.poster}}.jpg">
@@ -516,6 +533,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.6.poster}}.jpg">
@@ -533,6 +551,7 @@
 					</div>
 				</div>
 			</div>
+			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
 					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.7.poster}}.jpg">
